Apply the fix from #11736 to the modern themes (prevent row misalignment with AutoRowSize) (#11830)
* - Apply the fix from #11736 to the modern themes
- Add a test case for the "main" theme

* Modify the test cases so they're shared between themes.

--- a/handsontable/src/styles/base/_base.scss
+++ b/handsontable/src/styles/base/_base.scss
@@ -102,6 +102,14 @@
     &.ht-wrapper {
       border-radius: var(--ht-wrapper-border-radius, 0);
 
+      &:not(.htFirstDatasetColumnNotRendered) {
+        td {
+          &:first-of-type {
+            border-inline-start-width: 1px;
+          }
+        }
+      }
+
       &::before {
         @include mixins.pseudo();
 
@@ -237,13 +245,6 @@
         &::selection {
           background: transparent;
         }
-      }
-    }
-
-    // Cell
-    td {
-      &:first-of-type {
-        border-inline-start-width: 1px;
       }
     }
 
@@ -462,6 +463,13 @@
               background-color: var(--ht-accent-color);
             }
           }
+        }
+      }
+
+      // Cell
+      td {
+        &:first-of-type {
+          border-inline-start-width: 1px;
         }
       }
     }
